--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ before_install:
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
 
 script:
-- arduino --verify --board arduino:avr:uno $PWD/sketch.ino
+  - pwd 
+  - ls -lah
+  - ls berkas1/arduino-travis-test
+  - arduino --verify --board arduino:avr:uno berkas1/arduino-travis-test/sketch.ino
