--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,4 @@ before_install:
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
 
 script:
-  - pwd 
-  - ls -lah
-  - ls berkas1/arduino-travis-test
-  - arduino --verify --board arduino:avr:uno berkas1/arduino-travis-test/sketch.ino
+  - arduino --verify --board arduino:avr:uno sketch/sketch.ino
